@@ -2,7 +2,7 @@
 #
 # Description : Test Internet Speed thanks to Matt Martz
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 0.9.1 (18/Oct/14)
+# Version     : 0.9.2 (29/Dec/14)
 # Tested      : Raspbian/Debian/Ubuntu, OSX
 #
 # IMPROVEMENT : dialog menu with 2 methods.
@@ -22,5 +22,6 @@ clear
 echo -e "Test Internet bandwidth thanks to Matt Martz\n============================================\n· More Info at: https://github.com/sivel/speedtest-cli\n"
 
 python speedtest_cli.py
+rm $HOME/speedtest_cli.py
 
 read -p "Press [Enter] to continue..."
