@@ -3,6 +3,8 @@
 
 · Update Tweaks > other & removepkg scripts. 
 · Update Games > minecraft, quake, crispydoom.
+· Update Emus > pifba.
+· Update Info > check last images, test inet scripts.
 
 (08/12/14)
 ==========
